# bse

./: .gitignore  CMakeLists.txt  LICENSE  README.md  TODO.txt
BSEDemo/: BSEDemo.cpp  BSEDemo.h  CMakeLists.txt  Main.cpp  PhysicsTests.cpp  PhysicsTests.h  README.md  SettingsStack.cpp  SettingsStack.h  TestFramework.cpp  TestFramework.h  TestIDs.h  TestUtils.cpp  TestUtils.h
BSEDemo/xml/: testScene.xml
Commons/: DrawUtils.cpp  DrawUtils.h  GraphUtils.cpp  GraphUtils.h  ParamsTweaker.cpp  ParamsTweaker.h  QuadTree.h  QuadTreeTest.cpp  SoundUtils.cpp  SoundUtils.h  SysUtils.cpp  SysUtils.h  TextRenderer.cpp  TextRenderer.h
Samples/: CMakeLists.txt
Samples/AsteroidsBSE/: AsteroidsBSE.cpp  AsteroidsBSE.h  CMakeLists.txt
Samples/BrickBSE/: BrickBSE.cpp  BrickBSE.h  CMakeLists.txt
Samples/MazeBSE/: CMakeLists.txt  MazeBSE.cpp  MazeBSE.h  Readme.txt  main.cpp
bse/: CMakeLists.txt
bse/bseAI/: CMakeLists.txt
bse/bseAI/Include/: bseAIContext.h  bseAIScene.h  bseAITypes.h  bseAgent.h  bseController.h  bseDynamicAgent.h  bseGraph.h  bseKinematicAgent.h  bseSteeringBehaviour.h  bseVirtualWorld.h
bse/bseAI/Source/: bseAIContext.cpp  bseAIScene.cpp  bseGraph.cpp  bseSteeringBase.cpp
bse/bseCommons/: CMakeLists.txt
bse/bseCommons/Include/: bseBinaryHeap.h  bseBitField.h  bseBucket.h  bseCommons.h  bseMath.h  bseMemoryManager.h  bsePools.h  bseProfilingTools.h  bseTask.h  bseThreadedContexts.h  bseThreadingTools.h  bseTypes.h
bse/bseCommons/Source/: bseMath.cpp  bseMemoryManager.cpp  bseProfilingTools.cpp  bseTask.cpp  bseThreadingTools.cpp
bse/bsePhysics/: CMakeLists.txt
bse/bsePhysics/Include/: bseAABB.h  bseBody.h  bseCollision.h  bseDynamics.h  bseIsland.h  bseMaterial.h  bsePhysics.h  bsePhysicsCommons.h  bsePhysicsContext.h  bsePhysicsTypes.h  bseSAP.h  bseScene.h  bseShape.h
bse/bsePhysics/Source/: bseBody.cpp  bseCollision.cpp  bseDynamics.cpp  bseIsland.cpp  bseMaterial.cpp  bseSAP.cpp  bseScene.cpp  bseShape.cpp
bse/bseTools/: CMakeLists.txt
bse/bseTools/Include/: bseTools.h
bse/bseTools/Source/: bseTools.cpp
